--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,15 +1,7 @@
-# Configuração do Bun e Node.js no Railway
 [phases.setup]
-# Usar a versão mais recente do Bun
 nixpkgsArchive = 'master'
+nixpkgs = ['nodejs', 'bun']  # Certifique-se de que o Bun seja adicionado explicitamente
+command = "bun --version"
 
-# Garantir que o Node.js seja instalado
-nixpkgs = ['nodejs']
-
-# Configuração do Bun (se necessário)
 [build]
 image = 'bun'
-
-[phases.setup]
-# Verificar a instalação do Bun
-command = "bun --version"
