--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,7 +1,7 @@
 [phases.setup]
 nixpkgsArchive = 'master'
-nixpkgs = ['nodejs', 'bun']  # Certifique-se de que o Bun seja adicionado explicitamente
-command = "bun --version"
+nixpkgs = ['python3', 'pip']
 
 [build]
-image = 'bun'
+image = 'python'
+command = "pip install -r requirements.txt"  # Instala as dependências do Python
