--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -7,3 +7,6 @@ command = "pip install -r requirements.txt"
 
 [phases.run]
 command = "flask run --host=0.0.0.0 --port=5000"
+
+[phases.run]
+command = "pip install -r requirements.txt && flask run --host=0.0.0.0 --port=5000"
