--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -10,3 +10,6 @@ command = "flask run --host=0.0.0.0 --port=5000"
 
 [phases.run]
 command = "pip install -r requirements.txt && flask run --host=0.0.0.0 --port=5000"
+
+[phases.setup]
+nixpkgs = ['python3_8', 'pip']
