--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,7 +3,7 @@ nixpkgs = ['python3', 'pip']
 
 [build]
 image = 'python'
-command = "pip install -r requirements.txt"
+command = "pip install -r requirements.txt"  # Instalar as dependências listadas no requirements.txt
 
 [phases.run]
-command = "pip install flask && pip install -r requirements.txt && flask run --host=0.0.0.0 --port=5000"
+command = "pip install flask && pip install -r requirements.txt && flask run --host=0.0.0.0 --port=5000"  # Instalar o Flask, instalar outras dependências e rodar o Flask
