--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,7 +3,10 @@ nixpkgs = ['python3', 'pip']
 
 [build]
 image = 'python'
-command = "pip install -r requirements.txt"  # Instalar as dependências listadas no requirements.txt
+command = "pip install -r requirements.txt"  # Instalar dependências do projeto
 
 [phases.run]
-command = "python -m flask run --host=0.0.0.0 --port=5000"  # Rodar o Flask diretamente com o Python
+command = "python -m flask --app app run --host=0.0.0.0 --port=5000"  # Rodar a aplicação Flask
+
+[env]
+FLASK_APP = "app.py"
