--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -6,7 +6,7 @@ image = 'python'
 command = "pip install -r requirements.txt"  # Instalar dependências do projeto
 
 [phases.run]
-command = "python -m flask --app app run --host=0.0.0.0 --port=5000"  # Rodar a aplicação Flask
+command = command = "pip install -r requirements.txt"
 
-[env]
-FLASK_APP = "app.py"
+[phases.run]
+command = "uvicorn main:app --host=0.0.0.0 --port=5000"
