--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -6,4 +6,4 @@ image = 'python'
 command = "pip install -r requirements.txt"  # Instalar dependências do projeto
 
 [phases.run]
-command = "uvicorn vectorize_pdf_railway:app --host=0.0.0.0 --port=5000"
+command = "uvicorn vectorize_pdf_railway:app --host=0.0.0.0 --port=5000"  # Rodar o servidor FastAPI
