--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,7 +3,7 @@ nixpkgs = ['python3', 'pip']
 
 [build]
 image = 'python'
-command = "pip install -r requirements.txt"  # Instalar dependências do projeto
+command = "pip install -r requirements.txt"  # Instalar as dependências do projeto
 
 [phases.run]
-command = "uvicorn vectorize_pdf_railway:app --host=0.0.0.0 --port=5000"  # Rodar o servidor FastAPI
+command = "uvicorn vectorize_pdf_railway:app --host=0.0.0.0 --port=5000 --reload"
