--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,9 +1,8 @@
 [phases.setup]
 nixpkgs = ['python3', 'pip']
 
-[build]
-image = 'python'
-command = "pip install -r requirements.txt"  # Instalar as dependências do projeto
+[phases.install]
+cmds = ["pip install -r requirements.txt"]
 
-[phases.run]
-command = "uvicorn vectorize_pdf_railway:app --host=0.0.0.0 --port=5000 --reload"
+[phases.start]
+cmd = "uvicorn vectorize_pdf_railway:app --host=0.0.0.0 --port=5000"
