--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,9 +3,7 @@ nixpkgs = ['python311Full']
 
 [phases.install]
 cmds = [
-  "python3 -m ensurepip",
-  "python3 -m pip install --upgrade pip",
-  "python3 -m pip install -r requirements.txt"
+  "pip install -r requirements.txt"
 ]
 
 [phases.start]
