--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,8 +3,8 @@ nixpkgs = ['python311Full']
 
 [phases.install]
 cmds = [
-  "pip install -r requirements.txt"
+  "/opt/venv/bin/pip install -r requirements.txt"
 ]
 
 [phases.start]
-cmd = "uvicorn vectorize_pdf:app --host=0.0.0.0 --port=$PORT"
+cmd = "/opt/venv/bin/uvicorn vectorize_pdf:app --host=0.0.0.0 --port=$PORT"
