--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-fastapi==0.110.0
-uvicorn[standard]==0.29.0
-openai==1.23.2
-supabase==1.0.3
+fastapi==0.109.2
+uvicorn==0.27.1
+pydantic==2.5.3
+python-dotenv==1.0.0
+openai==1.11.1
+pdfplumber==0.10.2
+supabase==1.2.0
 requests==2.31.0
-pdfplumber==0.10.3
-nltk==3.8.1
-python-dotenv==1.0.1
